Fix alignment of buttons and search bar on clients table. fixes #51

--- a/app/assets/stylesheets/angular/angular.css.scss
+++ b/app/assets/stylesheets/angular/angular.css.scss
@@ -150,10 +150,12 @@ body {
 
     .table-search {
       width: 100%;
+      vertical-align: bottom;
     }
 
     .table-buttons {
       text-align: right;
+      vertical-align: top;
     }
   }
 }
