--- a/app/assets/stylesheets/angular/clients.css.scss
+++ b/app/assets/stylesheets/angular/clients.css.scss
@@ -227,6 +227,7 @@ $client-form-nav-padding: 50px;
     border-bottom-left-radius: 0;
     height: $search-height;
     display: inline-block;
+    vertical-align: top;
   }
 }
 
